Fix delete button spacing

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ img {
   color: #ffffff;
   background: #134d71;
   font-family: 'Quicksand', sans-serif;
+  margin: 0 auto;
 }
 
 .hidden {
